# lambda-interpreter

./: .gitignore  Interpreter.hs  LICENCE  Lambda.hs  LambdaInterpreter.cabal  Main.hs  Parser.hs  Printer.hs  README.md  lambda-interpreter.cabal
lib/: Prelude  aoc_2022_06  prelude  primes
src/: Lambda.hs  Main.hs  Parser.hs  Printer.hs
