cabal-version:       >= 2.0

name:                LambdaInterpreter
version:             0.1.0.0
license-file:        LICENCE
author:              Colm Baston
maintainer:          colm@colmbaston.uk
build-type:          Simple
extra-source-files:  README.md

executable LambdaInterpreter
  main-is:             Main.hs
  other-modules:       Lambda, Parser, Printer
  default-language:    Haskell2010
  build-depends:       base         ^>= 4.14,
                       containers   ^>= 0.6,
                       mtl          ^>= 2.2,
                       megaparsec   ^>= 8.0,
                       time         ^>= 1.9,
                       echo         ^>= 0.1,
                       directory    ^>= 1.3,
                       haskeline    ^>= 0.8,
                       transformers ^>= 0.5,
                       exceptions   ^>= 0.10
