cabal-version:       2.0

name:                LambdaInterpreter
version:             0.1.0.0
license-file:        LICENCE
author:              Colm Baston
maintainer:          colm@colmbaston.uk
build-type:          Simple
extra-source-files:  README.md

executable LambdaInterpreter
  default-language:    GHC2021
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Lambda, Parser, Printer
  build-depends:       base         ^>= 4.16,
                       containers   ^>= 0.6,
                       megaparsec   ^>= 9.2,
                       echo         ^>= 0.1,
                       directory    ^>= 1.3,
                       transformers ^>= 0.5,
                       haskeline    ^>= 0.8,
                       exceptions   ^>= 0.10
